<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/gradient">

    <ImageView
        android:id="@+id/ivLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/icone"
        android:layout_gravity="center"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="429dp"
        android:layout_gravity="center"
        android:layout_marginBottom="55dp"
        android:layout_marginTop="50dp"
        android:background="#00FFFFFF"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/edtLogin"
            android:layout_width="324dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/edtLogin"
            android:inputType="textEmailAddress"
            style="@style/login"/>

        <EditText
            android:id="@+id/edtSenha"
            android:layout_width="329dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/edtSenha"
            style="@style/login"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnEntrar"
            android:layout_width="172dp"
            android:layout_height="53dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:background="#1AFFFFFF"
            android:textColor="#ffff"
            android:textSize="20sp"
            android:text="@string/btnlogin" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="90dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvPergunta"
                android:textSize="16sp"
                android:textColor="#ffff"/>
            <Button
                android:id="@+id/btnCadastro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:textColor="#3BE1AA"
                android:text="@string/btnCadastrar"
                android:layout_marginLeft="8dp"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>